fixed p alignment

--- a/src/components/ExploreMenu/ExploreMenu.css
+++ b/src/components/ExploreMenu/ExploreMenu.css
@@ -10,7 +10,7 @@
     color:#262626;
 }
 
-.explore-menu p{
+.explore-menu-text{
     font-size: 1.6rem;
     max-width: 60%;
     color:#808080;
